--- a/.htaccess
+++ b/.htaccess
@@ -1,98 +1,57 @@
-# Tailoring Management System - Apache Configuration
-# This file provides URL rewriting and security settings
+# Tailoring Management System - WAMP Compatible Configuration
+# Minimal .htaccess for WAMP server compatibility
 
 # Enable URL rewriting
 RewriteEngine On
 
+# Redirect old authentication URLs to admin folder
+RewriteRule ^login\.php$ /tailoring/admin/login.php [R=301,L]
+RewriteRule ^register\.php$ /tailoring/admin/register.php [R=301,L]
+RewriteRule ^logout\.php$ /tailoring/admin/logout.php [R=301,L]
+RewriteRule ^settings\.php$ /tailoring/admin/settings.php [R=301,L]
+
+# Redirect admin utility files to admin folder
+RewriteRule ^setup_measurement_charts\.php$ /tailoring/admin/setup_measurement_charts.php [R=301,L]
+RewriteRule ^setup_multi_tenant\.php$ /tailoring/admin/setup_multi_tenant.php [R=301,L]
+RewriteRule ^auto_fix_user\.php$ /tailoring/admin/auto_fix_user.php [R=301,L]
+RewriteRule ^fix_measurement_charts\.php$ /tailoring/admin/fix_measurement_charts.php [R=301,L]
+RewriteRule ^fix_user_session\.php$ /tailoring/admin/fix_user_session.php [R=301,L]
+RewriteRule ^force_reset_password\.php$ /tailoring/admin/force_reset_password.php [R=301,L]
+RewriteRule ^check_measurement_charts\.php$ /tailoring/admin/check_measurement_charts.php [R=301,L]
+RewriteRule ^test_login\.php$ /tailoring/admin/test_login.php [R=301,L]
+RewriteRule ^info\.php$ /tailoring/admin/info.php [R=301,L]
+
 # Handle 404 errors
 ErrorDocument 404 /tailoring/404.php
 
-# Security headers
-<IfModule mod_headers.c>
-    Header always set X-Content-Type-Options nosniff
-    Header always set X-Frame-Options DENY
-    Header always set X-XSS-Protection "1; mode=block"
-    Header always set Referrer-Policy "strict-origin-when-cross-origin"
-    Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'"
-</IfModule>
-
-# File upload limits
-<IfModule mod_php7.c>
-    php_value upload_max_filesize 10M
-    php_value post_max_size 10M
-    php_value max_execution_time 300
-    php_value max_input_time 300
-    php_value memory_limit 256M
-</IfModule>
-
-<IfModule mod_php8.c>
-    php_value upload_max_filesize 10M
-    php_value post_max_size 10M
-    php_value max_execution_time 300
-    php_value max_input_time 300
-    php_value memory_limit 256M
-</IfModule>
-
-# Protect sensitive files
+# Protect sensitive files (WAMP compatible syntax)
 <Files "*.sql">
-    Order allow,deny
-    Deny from all
+    Require all denied
 </Files>
 
 <Files "*.log">
-    Order allow,deny
-    Deny from all
+    Require all denied
 </Files>
 
 <Files "config.php">
-    Order allow,deny
-    Deny from all
+    Require all denied
 </Files>
 
 <Files "database.php">
-    Order allow,deny
-    Deny from all
+    Require all denied
 </Files>
 
 # Protect installation file after setup
 <Files "install.php">
-    Order allow,deny
-    Deny from all
+    Require all denied
 </Files>
-
-# Enable compression
-<IfModule mod_deflate.c>
-    AddOutputFilterByType DEFLATE text/plain
-    AddOutputFilterByType DEFLATE text/html
-    AddOutputFilterByType DEFLATE text/xml
-    AddOutputFilterByType DEFLATE text/css
-    AddOutputFilterByType DEFLATE application/xml
-    AddOutputFilterByType DEFLATE application/xhtml+xml
-    AddOutputFilterByType DEFLATE application/rss+xml
-    AddOutputFilterByType DEFLATE application/javascript
-    AddOutputFilterByType DEFLATE application/x-javascript
-</IfModule>
-
-# Cache static files
-<IfModule mod_expires.c>
-    ExpiresActive on
-    ExpiresByType text/css "access plus 1 month"
-    ExpiresByType application/javascript "access plus 1 month"
-    ExpiresByType image/png "access plus 1 month"
-    ExpiresByType image/jpg "access plus 1 month"
-    ExpiresByType image/jpeg "access plus 1 month"
-    ExpiresByType image/gif "access plus 1 month"
-    ExpiresByType image/svg+xml "access plus 1 month"
-</IfModule>
 
 # Prevent access to hidden files
 <FilesMatch "^\.">
-    Order allow,deny
-    Deny from all
+    Require all denied
 </FilesMatch>
 
 # Prevent access to backup files
 <FilesMatch "\.(bak|backup|old|tmp)$">
-    Order allow,deny
-    Deny from all
+    Require all denied
 </FilesMatch>
