Fix logo display issues and add smart logo path detection
- Added get_logo_path() function for universal logo detection
- Updated all header files to use smart logo path detection
- Fixed .gitignore to allow logo files in uploads/logos/
- Added all logo files to repository (brand-logo.png, tailorpro-logo.png, etc.)
- Ensures logos display correctly on all systems and deployments
- Prevents logo path issues when deploying to different servers

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,14 @@ config/local.php
 # Uploads directory (user-generated content)
 uploads/*
 !uploads/.gitkeep
+# Allow logo files for branding
+!uploads/logos/
+uploads/logos/*
+!uploads/logos/*.png
+!uploads/logos/*.jpg
+!uploads/logos/*.jpeg
+!uploads/logos/*.svg
+!uploads/logos/*.gif
 
 # IDE and editor files
 .vscode/
