--- a/.htaccess
+++ b/.htaccess
@@ -107,6 +107,11 @@ RewriteRule ^info\.php$ admin/info.php [R=301,L]
 # Handle 404 errors
 ErrorDocument 404 /404.php
 
+# Sitemap - serve sitemap.xml from sitemap.php
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^sitemap\.xml$ sitemap.php [L]
+
 # Protect sensitive files (WAMP compatible syntax)
 <Files "*.sql">
     Require all denied
